# TicTacToe-AI

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/ai/: AI.cpp  AI.hpp
src/game/: Game.cpp  Game.hpp  Player.cpp  Player.hpp
src/human/: Human.cpp  Human.hpp
